--- a/index.html
+++ b/index.html
@@ -14,160 +14,32 @@
 
         <header class='header'>
             <div class='header__banner'></div>
-            <nav class='header__center'>
-                <ul class='header__center__nav'>
-                    <li class='header__center__nav__item'>Журнал</li>
+            <nav class='header__nav'>
+                <ul class='nav-bulleted'>
+                    <li class='nav-bulleted__link nav-bulleted__link_active topic-navlinks'><a href='#' class='topic-navlinks__link'>Журнал</a></li>
                 </ul>
+                <div class='nav-projects'>
+                    <div class='nav-main__logo'></div>
+                    <div class='nav-main__links project-links'>
+                        <a href='#' class='project-links__link link'>Бизнес</a>
+                        <a href='#' class='project-links__link link'>Жизнь</a>
+                        <a href='#' class='project-links__link link'>Люди</a>
+                    </div>
+                    <div class='nav-main__searchbox'>
+                        <input class='search' type='text' autocomplete class='header__nav__search' placeholder='Поиск'></input>
+                        <img class='search__icon' src='../assets/search.png' />
+                    </div>
+                </div>
             </nav>
-            <div class='header__bottom'>
-                <div class='logo'>
-                </div>
-                <nav class='header__bottom__nav'>
-                    <div class='header__bottom__nav__item link'>Бизнес</div>
-                    <div class='header__bottom__nav__item link'>Жизнь</div>
-                    <div class='header__bottom__nav__item link'>Люди</div>
-                </nav>
-                <div class='searchbox'>
-                    <input type='text' autocomplete='on' class='header__nav__search' placeholder='Поиск'></input>
-                    <img src='../assets/search.png' />
-                </div>
-            </div>
         </header>
 
-        <main class='main'>
-            <div class='main__articles'>
-                <div class='articles__wrap width__Xlarge'>
-                    <div class='article__pic'>
-                        <img class='pic__Xlarge' src='https://womenbz.ru/static/preview/preview_square_big/152.jpg' />
-                        <span class='article__pic__txt heading__Xlarge'>9 очень умных советов</span>
-                        <div class='article__stat'>
-                            <img src='https://www.iconsdb.com/icons/preview/white/eye-xxl.png' />
-                            <div class='article__stat__block'>1168</div>
-                            <img src='https://www.iconsdb.com/icons/preview/white/time-13-xxl.png' />
-                            <div class='article__stat__block'>10 мин</div>
-                        </div>
-                    </div>
-                </div>
-                <aside class="main__newsblock">
-                    <h2 class='link'>новости</h2>
-                    <div class='newsblock__block font__lead'>
-                        <div class='newsblock__block__txt'>
-                            <a class='link'>Разрыв шаблона должен исчезнуть через 202 года</a>
-                            <p>Такие данные были представлены в докладе Всемирного экономического форума</p>
-                        </div>
-                        <div class='newsblock__block__time'>2 недели назад</div>
-                    </div>
-                    <div class='newsblock__block font__lead'>
-                        <div class='newsblock__block__txt'>
-                            <a class='link'>Разрыв шаблона должен исчезнуть через 202 года</a>
-                            <p>Такие данные были представлены в докладе Всемирного экономического форума</p>
-                        </div>
-                        <div class='newsblock__block__time'>2 недели назад</div>
-                    </div>
-                    <div class='newsblock__block font__lead'>
-                        <div class='newsblock__block__txt'>
-                            <a class='link'>Разрыв шаблона должен исчезнуть через 202 года</a>
-                            <p>Такие данные были представлены в докладе Всемирного экономического форума</p>
-                        </div>
-                        <div class='newsblock__block__time'>2 недели назад</div>
-                    </div>
-                    <div class='newsblock__block font__lead'>
-                        <div class='newsblock__block__txt'>
-                            <a class='link'>Разрыв шаблона должен исчезнуть через 202 года</a>
-                            <p>Такие данные были представлены в докладе Всемирного экономического форума</p>
-                        </div>
-                        <div class='newsblock__block__time'>2 недели назад</div>
-                    </div>
-                </aside>
-                <div class='articles__wrap  width__medium'>
-                    <div class='article__pic'>
+        <main class='main-content'>
 
-                        <img class='pic__medium' src='https://womenbz.ru/static/preview/preview_wide/1366.jpg' />
-                        <div class='article__stat'>
-                            <img src='https://www.iconsdb.com/icons/preview/white/eye-xxl.png' />
-                            <div class='article__stat__block'>1168</div>
-                            <img src='https://www.iconsdb.com/icons/preview/white/time-13-xxl.png' />
-                            <div class='article__stat__block'>10 мин</div>
-                        </div>
-                    </div>
-
-                    <div class='article__section'>люди</div>
-                    <h3 class='link heading__small'>Как увеличить поток клиентов, когда их нет <span class='article__blur'>совсем</span></h3>
-                    <p class='font__lead article__lead'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore <span class='article__blur'>magna aliqua.</span></p>
-                </div>
-                <div class='articles__wrap  width__small'>
-                    <div class='article__pic'>
-
-                        <img class='pic__small' src='https://womenbz.ru/static/preview/preview_square_small/1365.jpg' />
-                        <div class='article__stat'>
-                            <img src='https://www.iconsdb.com/icons/preview/white/eye-xxl.png' />
-                            <div class='article__stat__block'>1168</div>
-                            <img src='https://www.iconsdb.com/icons/preview/white/time-13-xxl.png' />
-                            <div class='article__stat__block'>10 мин</div>
-                        </div>
-                    </div>
-
-                    <div class='article__section'>жизнь</div>
-                    <h3 class='link heading__small'>Как сделать карту желаний и <span class='article__blur'>исполнить</span>
-                        свои мечты</h3>
-                    <p class='font__lead article__lead'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div class='articles__wrap'>
-                    <div class='article__pic'>
-                        <img class='pic__special' src='https://womenbz.ru/static/adv_quote/promo_quote/57.jpg'></img>
-                    </div>
-                </div>
-            </div>
-            <div class='main__articles'>
-                <div class='articles__wrap width__large promo'>
-                    <div class='header__wrap'>
-                        <h1 class='heading__large'>Старт бизнеса</h1>
-                        <p>Подборка статей</p>
-                    </div>
-                    <div class='promo__links'>
-                        <div class='promo__link link'>Как это</div>
-                        <div class='promo__link link border'>Как вот это</div>
-                        <div class='promo__link link border'>Как еще то</div>
-                    </div>
-
-                </div>
-            </div>
-            <div class='main__articles'>
-                <h1 class='heading__large center'>Истории успеха</h1>
-                <div class='articles__link link'>Смотреть еще</div>
-            </div>
-
-            <div class='main__articles'>
-                <h1 class='heading__large center'>Бизнес</h1>
-                <div class='articles__link link'>Смотреть еще</div>
-            </div>
-            <div class='main__articles'>
-                <h1 class='heading__large center'>Жизнь</h1>
-                <div class='articles__link link'>Смотреть еще</div>
-            </div>
         </main>
 
         <footer class='footer'>
-            <div class='footer__upper'>
-                <div class='footer__nav'>
-                    <a>О проекте</a>
-                    <a>Команда</a>
-                    <a>Вакансии</a>
-                    <a>Контакты</a>
-                    <a>Прислать статью</a>
-                </div>
-                <div class='footer__social'>
-                    <img alt='youtube'></img>
-                    <img alt='telegram'></img>
-                    <img alt='instagram'></img>
-                    <img alt='facebook'></img>
-                    <img alt='vk'></img>
-                </div>
-            </div>
-            <div class='footer__copywrite'>© 2017 Womenbz. Интернет-сайт для девушек о бизнесе и здоровье.</div>
+
         </footer>
-        
+
     </div>
 </body>
