index.html, header main footer

--- a/index.html
+++ b/index.html
@@ -19,26 +19,118 @@
                     <li class='nav-bulleted__link nav-bulleted__link_active topic-navlinks'><a href='#' class='topic-navlinks__link'>Журнал</a></li>
                 </ul>
                 <div class='nav-projects'>
-                    <div class='nav-main__logo'></div>
-                    <div class='nav-main__links project-links'>
-                        <a href='#' class='project-links__link link'>Бизнес</a>
-                        <a href='#' class='project-links__link link'>Жизнь</a>
-                        <a href='#' class='project-links__link link'>Люди</a>
+                    <div class='nav-projects__logo'></div>
+                    <div class='nav-projects__links project-links'>
+                        <a href='#' class='project-links__link link-blue'>Бизнес</a>
+                        <a href='#' class='project-links__link link-blue'>Жизнь</a>
+                        <a href='#' class='project-links__link link-blue'>Люди</a>
                     </div>
-                    <div class='nav-main__searchbox'>
-                        <input class='search' type='text' autocomplete class='header__nav__search' placeholder='Поиск'></input>
+                    <div class='nav-projects__searchbox'>
+                        <input class='search' type='text' autocomplete placeholder='Поиск'></input>
                         <img class='search__icon' src='../assets/search.png' />
                     </div>
                 </div>
             </nav>
         </header>
 
-        <main class='main-content'>
-
+        <main class='content'>
+            <section class='articles'>
+                <article class='articles__item articles__item-Xlarge article'>
+                    <div class='article__pic article__pic-Xlarge pic-block'>
+                            <img class='pic-block__img' src='' alt=''/>
+                            <div class='pic-block__heading pic-block__heading heading-Xlarge'>
+                            </div>
+                            <div class='pic-block__heading pic-block__heading heading-medium'>
+                                </div>
+                            <div class='pic-block__txt stat'>
+                              <img class='stat__icon' src='' alt='' />
+                              <div class='stat__txt'>1168</div>
+                              <img class='stat__icon' src='' alt=''/>
+                              <div class='stat__txt'>10 мин</div>
+                            </div>
+                    </div>                   
+                </article>
+                <aside class='newsblock'></aside>
+                <article class='articles__item articles__item-medium article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-large article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-medium article'></article>
+                <article class='articles__item articles__item-small article'></article>
+            </section>
+            <section class='articles border-bottom'>
+                <article class='articles__item articles__item-medium article'></article>
+                <article class='articles__item articles__item-special promo'></article>
+            </section>
+            <section class='articles border-bottom highlighted'>
+                <h1 class='articles__heading heading-large'>Истории успеха</h1>
+                <article class='articles__item articles__item-2Xlarge article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <div class='articles__more link-blue'>Смотреть еще</div>
+            </section>
+            <section class='articles'>
+                <h1 class='articles__heading heading-large'>Бизнес</h1>
+                <article class='articles__item articles__item-medium article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-large article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-medium article'></article>
+                <article class='articles__item articles__item-small article'></article>
+            </section>
+            <section class='articles border-bottom'>
+                <article class='articles__item articles__item-large article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-medium article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-medium article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <div class='articles__more link-blue'>Смотреть еще</div>
+            </section>
+            <section class='articles'>
+                <h1 class='articles__heading heading-large'>Жизнь</h1>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-medium article'></article>
+                <article class='articles__item articles__item-small article'></article>
+                <div class='articles__more link-blue'>Смотреть еще</div>
+            </section>
         </main>
 
         <footer class='footer'>
-
+            <div class='footer__nav links-box'>
+                <div class='links-box__work org'>
+                    <a class='org__link link-white'>О проекте</a>
+                    <a class='org__link link-white'>Команда</a>
+                    <a class='org__link link-white'>Вакансии</a>
+                    <a class='org__link link-white'>Контакты</a>
+                    <a class='org__link link-white'>Прислать статью</a>
+                </div>
+                <div class='links-box__social social'>
+                    <a class='social__link link-white'><img class='social__icon'alt=''/></a>
+                    <a class='social__link link-white'><img class='social__icon'alt=''/></a>
+                    <a class='social__link link-white'><img class='social__icon'alt=''/></a>
+                    <a class='social__link link-white'><img class='social__icon'alt=''/></a>
+                    <a class='social__link link-white'><img class='social__icon'alt=''/></a>
+                </div>
+            </div>
+            <div class='footer__copyright'>
+                    © 2017 Womenbz. Интернет-сайт для девушек о бизнесе и здоровье.<br>
+                     Использование материалов Womenbz.ru разрешено только с предварительного<br>
+                     согласия правообладателей. Все права на картинки и тексты принадлежат их авторам.<br>
+                    Сайт может содержать контент, не предназначенный для лиц младше 16 лет.
+            </div>
         </footer>
 
     </div>
