index styles modified footer style added

--- a/index.html
+++ b/index.html
@@ -37,21 +37,52 @@
             <section class='articles'>
                 <article class='articles__item articles__item-Xlarge article'>
                     <div class='article__pic article__pic-Xlarge pic-block'>
-                            <img class='pic-block__img' src='' alt=''/>
-                            <div class='pic-block__heading pic-block__heading heading-Xlarge'>
+                        <img class='pic-block__img' src='' alt='' />
+                        <div class='pic-block__heading'>
+                            <div class='heading-Xlarge'>12 книг, которые помогут достичь целей в этом году</div>
+                            <div class='heading-medium'>Подборка от
+                                девушек-предпринимателей
                             </div>
-                            <div class='pic-block__heading pic-block__heading heading-medium'>
-                                </div>
-                            <div class='pic-block__txt stat'>
-                              <img class='stat__icon' src='' alt='' />
-                              <div class='stat__txt'>1168</div>
-                              <img class='stat__icon' src='' alt=''/>
-                              <div class='stat__txt'>10 мин</div>
-                            </div>
-                    </div>                   
+                        </div>
+
+                        <div class='pic-block__txt stat'>
+                            <img class='stat__icon' src='../assets/eye.png' alt='' />
+                            <div class='stat__txt'>2705</div>
+                            <img class='stat__icon' src='../assets/clock.png' alt='' />
+                            <div class='stat__txt'>11 мин</div>
+                        </div>
+                    </div>
                 </article>
-                <aside class='newsblock'></aside>
-                <article class='articles__item articles__item-medium article'></article>
+                <aside class='articles__item news'>
+                    <h2 class='news__block news__block-heading heading-medium link-blue'>новости</h2>
+                    <div class='news__block block'>
+                        <div class='block__txt'>
+                            <a class='font-lead font-bold link-blue'>Гендерный разрыв в зарплатах должен исчезнуть
+                                через 202 года</a>
+                            <p class='font-lead'>Такие данные были представлены в докладе Всемирного экономического
+                                форума.</p>
+                        </div>
+                        <div class='block__time'>месяц назад</div>
+                    </div>
+                    <div class='news__block block'></div>
+                    <div class='news__block block'></div>
+                    <div class='news__block block'></div>
+                </aside>
+                <article class='articles__item articles__item-medium article'>
+                    <div class='article__pic article__pic-medium pic-block'>
+                        <img class='pic-block__img' src='' alt='' />
+                        <div class='pic-block__txt stat'>
+                            <img class='stat__icon' src='../assets/eye.png' alt='' />
+                            <div class='stat__txt'>5274</div>
+                            <img class='stat__icon' src='../assets/clock.png' alt='' />
+                            <div class='stat__txt'>30 мин</div>
+                        </div>
+                    </div>
+                    <div class='article__projectname'>ЛЮДИ</div>
+                    <div class='article__heading'>Бизнес по-женски</div>
+                    <div class='article__lead font-lead'>Интервью со Златоцветой Петровой — основателем невероятно
+                        красивой и необычной студии, где шьют одежду</div>
+                </article>
                 <article class='articles__item articles__item-small article'></article>
                 <article class='articles__item articles__item-large article'></article>
                 <article class='articles__item articles__item-small article'></article>
@@ -118,18 +149,18 @@
                     <a class='org__link link-white'>Прислать статью</a>
                 </div>
                 <div class='links-box__social social'>
-                    <a class='social__link link-white'><img class='social__icon'alt=''/></a>
-                    <a class='social__link link-white'><img class='social__icon'alt=''/></a>
-                    <a class='social__link link-white'><img class='social__icon'alt=''/></a>
-                    <a class='social__link link-white'><img class='social__icon'alt=''/></a>
-                    <a class='social__link link-white'><img class='social__icon'alt=''/></a>
+                    <a class='social__link link-white'><img class='social__icon' alt='' /></a>
+                    <a class='social__link link-white'><img class='social__icon' alt='' /></a>
+                    <a class='social__link link-white'><img class='social__icon' alt='' /></a>
+                    <a class='social__link link-white'><img class='social__icon' alt='' /></a>
+                    <a class='social__link link-white'><img class='social__icon' alt='' /></a>
                 </div>
             </div>
             <div class='footer__copyright'>
-                    © 2017 Womenbz. Интернет-сайт для девушек о бизнесе и здоровье.<br>
-                     Использование материалов Womenbz.ru разрешено только с предварительного<br>
-                     согласия правообладателей. Все права на картинки и тексты принадлежат их авторам.<br>
-                    Сайт может содержать контент, не предназначенный для лиц младше 16 лет.
+                © 2017 Womenbz. Интернет-сайт для девушек о бизнесе и здоровье.<br>
+                 Использование материалов Womenbz.ru разрешено только с предварительного<br>
+                 согласия правообладателей. Все права на картинки и тексты принадлежат их авторам.<br>
+                Сайт может содержать контент, не предназначенный для лиц младше 16 лет.
             </div>
         </footer>
 
