styles added header footer

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
             <div class='header__banner'></div>
             <nav class='header__nav'>
                 <ul class='nav-bulleted'>
-                    <li class='nav-bulleted__link nav-bulleted__link_active topic-navlinks'><a href='#' class='topic-navlinks__link'>Журнал</a></li>
+                    <li class='nav-bulleted__link nav-bulleted__link_active topic-navlinks'><a href='https://womenbz.ru/'
+                            class='topic-navlinks__link'>Журнал</a></li>
                 </ul>
                 <div class='nav-projects'>
                     <div class='nav-projects__logo'></div>
                     <div class='nav-projects__links project-links'>
-                        <a href='#' class='project-links__link link-blue'>Бизнес</a>
-                        <a href='#' class='project-links__link link-blue'>Жизнь</a>
-                        <a href='#' class='project-links__link link-blue'>Люди</a>
+                        <a href='https://womenbz.ru/business/' class='project-links__link link-blue'>Бизнес</a>
+                        <a href='https://womenbz.ru/life/' class='project-links__link link-blue'>Жизнь</a>
+                        <a href='https://womenbz.ru/people/' class='project-links__link link-blue'>Люди</a>
                     </div>
                     <div class='nav-projects__searchbox'>
                         <input class='search' type='text' autocomplete placeholder='Поиск'></input>
@@ -39,10 +40,10 @@
                     <div class='article__pic article__pic-Xlarge pic-block'>
                         <img class='pic-block__img' src='' alt='' />
                         <div class='pic-block__heading'>
-                            <div class='heading-Xlarge'>12 книг, которые помогут достичь целей в этом году</div>
-                            <div class='heading-medium'>Подборка от
+                            <span class='heading-Xlarge'>12 книг, которые помогут достичь целей в этом году</span>
+                            <span class='heading-medium'>Подборка от
                                 девушек-предпринимателей
-                            </div>
+                            </span>
                         </div>
 
                         <div class='pic-block__txt stat'>
@@ -57,9 +58,9 @@
                     <h2 class='news__block news__block-heading heading-medium link-blue'>новости</h2>
                     <div class='news__block block'>
                         <div class='block__txt'>
-                            <a class='font-lead font-bold link-blue'>Гендерный разрыв в зарплатах должен исчезнуть
+                            <a class='font-base font-bold link-blue'>Гендерный разрыв в зарплатах должен исчезнуть
                                 через 202 года</a>
-                            <p class='font-lead'>Такие данные были представлены в докладе Всемирного экономического
+                            <p class='font-base'>Такие данные были представлены в докладе Всемирного экономического
                                 форума.</p>
                         </div>
                         <div class='block__time'>месяц назад</div>
@@ -80,7 +81,7 @@
                     </div>
                     <div class='article__projectname'>ЛЮДИ</div>
                     <div class='article__heading'>Бизнес по-женски</div>
-                    <div class='article__lead font-lead'>Интервью со Златоцветой Петровой — основателем невероятно
+                    <div class='article__lead font-base'>Интервью со Златоцветой Петровой — основателем невероятно
                         красивой и необычной студии, где шьют одежду</div>
                 </article>
                 <article class='articles__item articles__item-small article'></article>
@@ -157,10 +158,12 @@
                 </div>
             </div>
             <div class='footer__copyright'>
-                © 2017 Womenbz. Интернет-сайт для девушек о бизнесе и здоровье.<br>
-                 Использование материалов Womenbz.ru разрешено только с предварительного<br>
-                 согласия правообладателей. Все права на картинки и тексты принадлежат их авторам.<br>
-                Сайт может содержать контент, не предназначенный для лиц младше 16 лет.
+                <p class='font-base'><span class='font-bold'>© 2017 Womenbz. Интернет-сайт для девушек о бизнесе и
+                        здоровье.</span><br>
+                     Использование материалов Womenbz.ru разрешено только с предварительного<br>
+                     согласия правообладателей. Все права на картинки и тексты принадлежат их авторам.<br>
+                    Сайт может содержать контент, не предназначенный для лиц младше 16 лет.</p>
+
             </div>
         </footer>
 
